@@ -36,14 +36,11 @@
 	<h3>CHANGELOG</h3>
 	<div class="pad">
 		<span><b>2019-10-27</b></span>
-		<div id="changelog20191027">
+		<div id="changelog20200105">
 			<ul>
-				<li>Added Ribbon Magician Hat</li>
-				<li>Fixed Damage calculation with Wakwak card</li>
-				<li>Fixed Attack Modifier update with Bakonawa card</li>
-				<li>Updated Elemental armors wearable by Novice/Super Novice</li>
-				<li>Fixed Vanilla restrictions for Malaya MVP cards</li>
-				<li>Added Flat MATK bonus for the card having this effect</li>
+				<li>Updated BG items</li>
+				<li>Brasilis and Moscovia cards</li>
+				<li>Fixed CRIT formula</li>
 			</ul>
 		</div>
 		<br/>
