@@ -1,3 +1,13 @@
+[2020-01-05]
+- Updated BG items
+
+[2019-12-22]
+- Brasilis and Moscovia cards
+
+[2019-12-07]
+- Fixed CRIT formula
+- Fixed misc bugs
+
 [2019-10-30]
 - Added Old Glast Heim items
 
